--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "next": "14.2.7",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "swr": "^2.2.5",
     "tailwindcss-animate": "^1.0.7",
     "tw-merge": "^0.0.1-alpha.3"
   },
