--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "^10.0.0",
     "@next/third-parties": "^14.2.11",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@shikijs/rehype": "^1.17.6",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -26,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwindcss-animate": "^1.0.7",
     "tw-merge": "^0.0.1-alpha.3"
